welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: identifier expected but integer literal found.
  var A:Int==a%10
               ^shareDigit:3: error: identifier expected but integer literal found.
  var B:Int==b%10
               ^shareDigit:4: error: identifier expected but integer literal found.
  var C:Int==a/10
               ^shareDigit:5: error: identifier expected but integer literal found.
  var D:Int==b/10
               ^