welcome.lessons.welcome.bat.bool2.ShareDigit.scala.code
def shareDigit(a:Int, b:Int):Boolean = {
  var A:Int==a%10
  var B:Int==b%10
  var C:Int==a/10
  var D:Int==b/10
  
  if (A==B||A==D||C==B||C==D){
    return true
  }
  return false
  
}